--- a/style.css
+++ b/style.css
@@ -308,7 +308,7 @@ footer .column i {
     display: none;
   }
   .intro h1{
-  
+    height:100px;
     padding-top:100px; 
     padding-bottom:50px;
   }
