--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ p {
 }
 
 #mainNav {
-  background-color: rgba(47, 23, 15, 0.9);
+  background-color: rgba(15, 45, 47, 0.9);
   font-family: 'Raleway';
 }
 
@@ -303,7 +303,7 @@ footer .column i {
   height: 30px;
 }
 
-@media only screen and (max-width: 992px){
+@media only screen and (max-width: 776px){
 
   footer h4{
     padding-top: 25px;
@@ -321,9 +321,9 @@ footer .column i {
 
 /* It is Adjacent sibling combinator */
 
-footer .column i + i {
+/* footer .column i + i {
   padding: 0 0.5em;
-}
+} */
 footer .contact{
   display: flex;
 }
